# Full-text-searcher

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/libdriver/: driver.h
include/libindex/: index.h
include/libindexaccessor/: indexaccessor.h
include/libparser/: parser.h
src/: CMakeLists.txt
src/driver-cli/: CMakeLists.txt  config.json  main.cpp
src/index-cli/: CMakeLists.txt  main.cpp
src/indexaccessor-cli/: CMakeLists.txt  main.cpp
src/libdriver/: CMakeLists.txt  driver.cpp
src/libindex/: CMakeLists.txt  index.cpp  index_test.cpp
src/libindexaccessor/: CMakeLists.txt  indexaccessor.cpp  indexaccessor_test.cpp
src/libparser/: CMakeLists.txt  parser.cpp  parser_test.cpp
src/parser-cli/: CMakeLists.txt  main.cpp
